[package]
name = "reqtrace"
version = "0.1.1"
edition = "2021"
authors = ["Arun Prakash <arunprakash27ar@gmail.com>"]
description = "A simple command-line tool to trace API calls made by other commands"
license = "MIT"
repository = "https://github.com/onemadgeek/reqtrace"

[dependencies]
dns-lookup = "2.0.4"
colored = "2.0"
chrono = "0.4"