[package]
name = "reqtrace"
version = "0.2.0"
authors = ["Your Name <your.email@example.com>"]
description = "A network connection monitoring and control tool"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/reqtrace"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
chrono = "0.4"
dns-lookup = "2.0"
indicatif = "0.17"