[package]
name = "reqtrace"
version = "0.2.0"
authors = ["Arun Prakash <arunprakash27ar@gmail.com>"]
description = "A powerful command-line tool for real-time network activity monitoring, connection tracing, and network access control of any process or command."
edition = "2021"
license = "MIT"
repository = "https://github.com/onemadgeek/reqtrace"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
chrono = "0.4"
dns-lookup = "2.0"
indicatif = "0.17"